<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="default"
        android:entries="@array/pref_theme_list_titles"
        android:entryValues="@array/pref_theme_list_values"
        android:icon="@drawable/ic_baseline_dark_mode_24"
        android:key="theme_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/dark_mode_summary"
        android:title="@string/dark_mode"
        app:iconSpaceReserved="true" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/pref_lang_list_titles"
        android:entryValues="@array/pref_lang_list_values"
        android:icon="@drawable/ic_baseline_language_24"
        android:key="language_app"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/language_summary"
        android:title="@string/language"
        app:iconSpaceReserved="true" />

    <Preference
        android:icon="@drawable/ic_baseline_help_24"
        android:key="about"
        android:summary="@string/copyright_summary"
        android:title="@string/about" />

</PreferenceScreen>