<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.liaudev.githubuser.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.liaudev.githubuser.setting.SettingFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.liaudev.githubuser.favoritefeature.FavoriteFragment"
        android:label="@string/title_favorite"
        app:moduleName="favoritefeature"
        tools:layout="@layout/fragment_favorite" />

</navigation>