<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.SplashActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/app_name"
        app:tint="?android:attr/textColorPrimary"
        android:src="@drawable/githublogo"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toTopOf="@+id/tvSubTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/subtitle_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:transitionName="logo_subtitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/version_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>